<!--
  ~ Copyright (c) 2015 Coder.HanXin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">SomeFilms</string>
    <string name="action_settings">Settings</string>
    
    <string name="message.loading_more_films">Loading more films</string>
    <string name="message.loading_film">Film loading, please wait</string>


    <string name="see_more">See more</string>

    <string name="film_directors">Directors</string>
    <string name="film_casts">Casts</string>
    <string name="film_details">Details</string>
    <string name="film_details_original_title">Original Title</string>
    <string name="film_details_year">Year</string>
    <string name="film_details_genres">Genres</string>
    <string name="film_details_countries">Countries</string>

</resources>
