<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Coder.HanXin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<com.addict.somefilms.views.customs.FilmDetailCardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:internal="http://schemas.android.com/apk/res-auto"
    android:id="@+id/film_detail_details_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    internal:title="@string/film_details"
    >

    <LinearLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_small">

        <com.addict.somefilms.views.customs.FilmDetailInfoLayout
            android:id="@+id/details_original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:visibility="gone"
            internal:title="@string/film_details_original_title"
            />
        <com.addict.somefilms.views.customs.FilmDetailInfoLayout
            android:id="@+id/details_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:visibility="gone"
            internal:title="@string/film_details_genres"
            />
        <com.addict.somefilms.views.customs.FilmDetailInfoLayout
            android:id="@+id/details_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:visibility="gone"
            internal:title="@string/film_details_year"
            />
        <com.addict.somefilms.views.customs.FilmDetailInfoLayout
            android:id="@+id/details_countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:visibility="gone"
            internal:title="@string/film_details_countries"
            />
    </LinearLayout>


</com.addict.somefilms.views.customs.FilmDetailCardLayout>
